--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build:tailwind": "tailwindcss build styles/tailwind.css -o output.css",
-    "build": "tsc && vite build && vite buil:tailwind",
+    "build-front":"vite build && build:tailwind",
+    "build": "tsc && build-front",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
