--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0"
